--- a/League/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/League/Views/Account/ResetPasswordConfirmation.cshtml
@@ -11,6 +11,6 @@
         @Localizer["The new password is saved and activated"].<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-tenant="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a>.
     </p>
 </div>
