--- a/League/Views/Account/SignInRejectedEmailNotConfirmed.cshtml
+++ b/League/Views/Account/SignInRejectedEmailNotConfirmed.cshtml
@@ -12,6 +12,6 @@
         @Localizer["Your account is currently disabled, because your email address has not been confirmed yet"]<br />
     </site-alert>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-tenant="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign in"]</a>
     </p>
 </div>
