--- a/League/Views/TeamApplication/Start.cshtml
+++ b/League/Views/TeamApplication/Start.cshtml
@@ -58,7 +58,7 @@
             </ul>
         </div>
         <div class="col-12">
-            <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectTeam)" asp-route-organization="@tenantUrlSegment" class="btn btn-primary mb-2">Start the registration</a>
+            <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectTeam)" asp-route-tenant="@tenantUrlSegment" class="btn btn-primary mb-2">Start the registration</a>
         </div>
     </div>
 </div>
