--- a/League/Views/Account/ConfirmEmailError.cshtml
+++ b/League/Views/Account/ConfirmEmailError.cshtml
@@ -20,6 +20,6 @@
         @Localizer["Please consider to create an account again. Then, another confirmation email will be sent to you."]
     </p>
     <p>
-        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.CreateAccount)" asp-route-organization="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Create Account"]</a>
+        <a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.CreateAccount)" asp-route-tenant="@tenantUrlSegment" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Create Account"]</a>
     </p>
 </div>
