--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -10,7 +10,7 @@
 }
 <h2 class="h2">@(ViewData["Title"])</h2>
 <hr />
-<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ForgotPassword)" asp-route-organization="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
+<form asp-controller="@nameof(Account)" asp-action="@nameof(Account.ForgotPassword)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@ViewData["ReturnUrl"]" method="post" class="col-md-8 col-sm-10 col-12 pl-0" role="form">
     <p>
         @(Localizer["Please enter the primary email address or the username of your account. We will send and email with a code to reset the password to this email address."])
     </p>
