--- a/League/Views/Error/AccessDenied.cshtml
+++ b/League/Views/Error/AccessDenied.cshtml
@@ -13,12 +13,12 @@
     {
         @* Signed in, but account does not have enough privileges *@
         <p>@Localizer["Your user account is not permitted to access the requested page"]</p>
-        <p><a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" asp-route-returnurl="@returnUrl" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in with another account"]</a></p>
+        <p><a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@returnUrl" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in with another account"]</a></p>
     }
     else
     {
         @* With Asp.Net Core Identity this will never show, because there is an immediate redirect to sign-in *@
         <p>@Localizer["You must be signed in to access the requested page"]</p>
-        <p><a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-organization="@tenantUrlSegment" asp-route-returnurl="@returnUrl" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a></p>
+        <p><a asp-controller="@nameof(League.Controllers.Account)" asp-action="@nameof(League.Controllers.Account.SignIn)" asp-route-tenant="@tenantUrlSegment" asp-route-returnurl="@returnUrl" class="btn btn-lg btn-primary col-sm-8 col-md-5">@Localizer["Sign-in now"]</a></p>
     }
 </div>
