--- a/League/Views/Manage/_EditEmail2ModalPartial.cshtml
+++ b/League/Views/Manage/_EditEmail2ModalPartial.cshtml
@@ -14,7 +14,7 @@
         <div>
             <p>@Localizer["The Additional Email will receive the same messages as the Primary Email."]</p>
         </div>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditEmail2)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditEmail2)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
