--- a/League/Views/Manage/_EditPhoneModalPartial.cshtml
+++ b/League/Views/Manage/_EditPhoneModalPartial.cshtml
@@ -12,7 +12,7 @@
 <!-- Modal -->
 <modal id="change-email" title="@Localizer["Change Primary Phone Number"].Value" tabindex="-1">
     <modal-body>
-        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
+        <form asp-controller="@nameof(Manage)" asp-action="@nameof(Manage.EditPhoneNumber)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
             <site-validation-summary show="All"></site-validation-summary>
             <input name="IsValid" type="hidden" value="@ViewData.ModelState.IsValid.ToString()" />
             <div class="form-group">
