--- a/League/Views/Team/_ChangeVenueModalPartial.cshtml
+++ b/League/Views/Team/_ChangeVenueModalPartial.cshtml
@@ -18,7 +18,7 @@
                     <a asp-action="@nameof(Venue.Edit)"
                        asp-controller="@nameof(Venue)"
                        asp-route-id="@Model.VenueId"
-                       asp-route-organization="@tenantUrlSegment"
+                       asp-route-tenant="@tenantUrlSegment"
                        asp-route-returnurl="@(TenantLink.Action(nameof(Team.MyTeam), nameof(Team)))"
                        site-authorize-resource site-resource="@(new List<VenueTeamRow>{{ new VenueTeamRow{ TeamId = Model.TeamId, VenueId = Model.VenueId.Value }}})"
                        site-requirement="@League.Authorization.VenueOperations.EditVenue"
@@ -26,14 +26,14 @@
                 }
             </div>
             <div class="mb-4">
-                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-organization="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" role="form">
+                <form asp-controller="@nameof(Team)" asp-action="@nameof(Team.SelectVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-tid="@Model.TeamId" method="get" role="form">
                     <button type="button" site-ajax-submit class="btn btn-primary btn-block">@Localizer["Select another venue"]</button>
                 </form>
             </div>
             <div>
                 <a asp-action="@nameof(Venue.Create)"
                    asp-controller="@nameof(Venue)"
-                   asp-route-organization="@tenantUrlSegment"
+                   asp-route-tenant="@tenantUrlSegment"
                    asp-route-tid="@Model.TeamId"
                    asp-route-returnurl="@TenantLink.Action(nameof(Team.MyTeam), nameof(Team))"
                    site-authorize-resource site-resource="@(new List<VenueTeamRow>())"
