--- a/League/Views/TeamApplication/Confirm.cshtml
+++ b/League/Views/TeamApplication/Confirm.cshtml
@@ -48,8 +48,8 @@
     </div>
     <div class="row">
         <div class="form-group col-12 col-md-6">
-            <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Confirm)" asp-route-organization="@tenantUrlSegment" method="post" role="form">
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-organization="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
+            <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.Confirm)" asp-route-tenant="@tenantUrlSegment" method="post" role="form">
+                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary d-inline-block">@Localizer["Back"]</a>
                 <input type="hidden" id="Done" name="Done" value="true" />
                 <button type="submit" class="btn btn-primary d-inline-block ">@Localizer["Confirm and save"]</button>
             </form>
