--- a/League/Views/TeamApplication/SelectVenue.cshtml
+++ b/League/Views/TeamApplication/SelectVenue.cshtml
@@ -17,7 +17,7 @@
     <h2 class="h2">@ViewData["Title"]</h2>
     <hr class="mb-3" />
     @(await Component.InvokeAsync<League.Components.VenueSelector>(componentModel))
-    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectVenue)" asp-route-organization="@tenantUrlSegment" method="post">
+    <form asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.SelectVenue)" asp-route-tenant="@tenantUrlSegment" method="post">
         <input asp-for="TeamId" type="hidden" />
         <input asp-for="VenueId" type="hidden" />
         <div class="row mt-3">
@@ -28,12 +28,12 @@
         <div class="row">
             <div class="form-group col-12 col-md-6">
                 <label class="mt-0">@Localizer["No venue from the list applies"]</label>
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-organization="@tenantUrlSegment" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new venue"]</a>
+                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditVenue)" asp-route-tenant="@tenantUrlSegment" asp-route-isnew="true" class="btn btn-primary">@Localizer["Create a new venue"]</a>
             </div>
         </div>
         <div class="row">
             <div class="form-group col-12 col-md-6">
-                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-organization="@tenantUrlSegment" class="btn btn-secondary">@Localizer["Back"]</a>
+                <a asp-controller="@nameof(TeamApplication)" asp-action="@nameof(TeamApplication.EditTeam)" asp-route-tenant="@tenantUrlSegment" class="btn btn-secondary">@Localizer["Back"]</a>
             </div>
         </div>
     </form>
