--- a/League/Views/Upload/TeamPhoto.cshtml
+++ b/League/Views/Upload/TeamPhoto.cshtml
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col-md-9">
             <div id="dropzone pb-2">
-                <form asp-action="@nameof(Upload.TeamPhoto)" asp-controller="@nameof(Upload)" asp-route-organization="@tenantUrlSegment" asp-route-id="" class="dropzone dz-clickable" id="teamPhotoUploader">
+                <form asp-action="@nameof(Upload.TeamPhoto)" asp-controller="@nameof(Upload)" asp-route-tenant="@tenantUrlSegment" asp-route-id="" class="dropzone dz-clickable" id="teamPhotoUploader">
                     <input type="hidden" name="teamId" value="@Model.Team.Id" />
                     <div class="dz-message">
                         @Localizer["Drop files here or click to select"].
@@ -55,7 +55,7 @@
         <div>@Localizer["Delete the photo of team '{0}'?", Model.Team.Name]</div>
     </modal-body>
     <modal-footer show-dismiss="true" dismiss-text="@Localizer["Cancel"].Value">
-        <a class="btn btn-primary" asp-action="@nameof(Upload.RemoveTeamPhoto)" asp-controller="@nameof(Upload)" asp-route-organization="@tenantUrlSegment" asp-route-id="@Model.Team.Id">@Localizer["Delete team photo"]</a>
+        <a class="btn btn-primary" asp-action="@nameof(Upload.RemoveTeamPhoto)" asp-controller="@nameof(Upload)" asp-route-tenant="@tenantUrlSegment" asp-route-id="@Model.Team.Id">@Localizer["Delete team photo"]</a>
     </modal-footer>
 </modal>
 @section styles
