Migrate startup from Host.CreateDefaultBuilder to WebApplicationBuilder
ASP.NET Core 3.1 used the Generic Host for Startup. This is compatible with NET6.0. NET6.0 now recommends the new minimal hosting model with WebApplicationBuilder.

Most configuration now happens in WebApplicationBuilder and static helper classes LeagueStartup and WebAppStartup for League.Demo.

Further reading:
Apps migrating to 6.0 don't need to use the new minimal hosting model
https://learn.microsoft.com/en-us/aspnet/core/migration/31-to-60?view=aspnetcore-7.0&tabs=visual-studio
https://learn.microsoft.com/en-us/aspnet/core/migration/50-to-60-samples?view=aspnetcore-7.0
https://andrewlock.net/exploring-dotnet-6-part-2-comparing-webapplicationbuilder-to-the-generic-host/
https://andrewlock.net/exploring-dotnet-6-part-7-analyzers-for-minimal-apis/

--- a/League.Demo/Views/Home/AboutLeague.cshtml
+++ b/League.Demo/Views/Home/AboutLeague.cshtml
@@ -57,7 +57,7 @@
     <div class="row">
         <article class="col-8">
             @{
-                var leagueAssembly = System.Reflection.Assembly.GetAssembly(typeof(League.Startup))?.GetName();
+                var leagueAssembly = System.Reflection.Assembly.GetAssembly(typeof(League.LeagueStartup))?.GetName();
                 var tmAssembly = System.Reflection.Assembly.GetAssembly(typeof(TournamentManager.DateTimePeriod))?.GetName();
                 if (leagueAssembly != null && tmAssembly != null)
                 {
