Change League.Demo project namespace to League.WebApp
Namespace was League.Web before, which might clash with the League project.

--- a/League.Demo/Views/Home/Welcome.cshtml
+++ b/League.Demo/Views/Home/Welcome.cshtml
@@ -47,7 +47,7 @@
             <li><span class="fa-li"><i class="fas fa-question text-primary"></i></span>@Localizer["Manual work takes too much from your leisure time?"]</li>
         </ul>
         <h4 class="h5">
-            <a asp-action="@nameof(League.Web.Controllers.Home.AboutLeague)" asp-controller="@nameof(League.Web.Controllers.Home)" class="text-primary font-weight-bolder" ><i class="fa fa-check-circle text-primary"></i> @Localizer["Here is the solution to help you out!"]</a>
+            <a asp-action="@nameof(League.WebApp.Controllers.Home.AboutLeague)" asp-controller="@nameof(League.WebApp.Controllers.Home)" class="text-primary font-weight-bolder" ><i class="fa fa-check-circle text-primary"></i> @Localizer["Here is the solution to help you out!"]</a>
         </h4>
     </div>
 </div>
