--- a/League.Demo/Views/Shared/_Layout.cshtml
+++ b/League.Demo/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 @using League.Routing
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
-@using League.Web.Controllers
+@using League.WebApp.Controllers
 @inject ITenantContext TenantContext
 @inject IViewLocalizer Localizer
 <!DOCTYPE html>
