--- a/League/Views/Account/ForgotPassword.cshtml
+++ b/League/Views/Account/ForgotPassword.cshtml
@@ -5,7 +5,7 @@
 @using TournamentManager.MultiTenancy
 @model ForgotPasswordViewModel
 @{
-    ViewData["Title"] = Localizer["Forgot your password?"];
+    ViewData["Title"] = Localizer["Forgot your password?"].Value;
     var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
 }
 <h2 class="h2">@(ViewData["Title"])</h2>
