--- a/League/Views/Account/ResetPassword.cshtml
+++ b/League/Views/Account/ResetPassword.cshtml
@@ -5,7 +5,7 @@
 @inject ITenantContext TenantContext
 @model ResetPasswordViewModel
 @{
-    ViewData["Title"] = Localizer["Reset password"];
+    ViewData["Title"] = Localizer["Reset password"].Value;
     var tenantUrlSegment = TenantContext.SiteContext.UrlSegmentValue;
 }
 <div>
