Fixes for authorization
* Team / My Team is again visibible for team managers
* Add missing "using League.MultiTenancy" in razor views
+ Bump version to v6.1.1

--- a/League/Views/Manage/Index.cshtml
+++ b/League/Views/Manage/Index.cshtml
@@ -2,6 +2,7 @@
 @using League.Helpers
 @using Microsoft.AspNetCore.Mvc.Localization
 @using TournamentManager.MultiTenancy
+@using League.MultiTenancy @* don't remove *@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @inject MetaDataHelper Metadata
