--- a/League/Views/Team/MyTeam.cshtml
+++ b/League/Views/Team/MyTeam.cshtml
@@ -6,6 +6,7 @@
 @using TournamentManager.DI
 @using TournamentManager.MultiTenancy
 @using TournamentManager.DAL.EntityClasses
+@using League.MultiTenancy @* don't remove *@
 @inject IViewLocalizer Localizer
 @inject ITenantContext TenantContext
 @inject TenantLink TenantLink
