style: Clearer wording regarding displayed contact details
Users must be signed-in and be member of a team

--- a/League/Views/Team/Single.cshtml
+++ b/League/Views/Team/Single.cshtml
@@ -76,7 +76,7 @@
             else
             {
                 <div class="text-success col-md-3">@Localizer["Team contact"]</div>
-                <div class="col-md-7 mb-2">@Localizer["Contacts are only displayed to members of any team"].</div>
+                <div class="col-md-7 mb-2"><strong>@Localizer["Contacts are displayed only to signed-in users who are members of a team."]</strong></div>
             }
         }
         <div class="text-success col-md-3">@Localizer["Team Photo"]</div>
